hphp/test/zend/bad/ext/standard/tests/assert/assert_error3.php.expectf
Parse error: syntax error, unexpected '$' in %s(3) : assert code on line 1

Fatal error: %s
0 $ 0 in %s on line 3